# cppkafka_test

./: CMakeLists.txt  default.nix  main.cpp
